[package]
name = "rust_wasm"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "rust_wasm"
# path = "./src/lib.rs"


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
zip = "0.6.2"
walkdir = "2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
